<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.LoginActivity"
    android:background="@color/light_grey">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="24dp"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textColor="@color/design_default_color_primary_dark"
            android:fontFamily="sans-serif-black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_caption"
            android:layout_marginVertical="8dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@android:color/darker_gray"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="1dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/search_background"
            android:elevation="2dp"
            android:hint="@string/email_hint"
            android:paddingHorizontal="24dp"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="1dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/search_background"
            android:elevation="2dp"
            android:hint="@string/password_hint"
            android:paddingHorizontal="24dp"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:fontFamily="sans-serif-black"
            android:paddingVertical="16dp"/>
        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/forgot_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_marginVertical="8dp"
            android:textColor="@color/design_default_color_primary"
            android:fontFamily="sans-serif-black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_seperator"
            android:fontFamily="sans-serif-black"/>

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/create_new_account"
            android:fontFamily="sans-serif-black"
            android:backgroundTint="@color/theme_green"
            android:paddingVertical="16dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>