<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/search_background"
    android:elevation="2dp"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_margin="2dp"
    android:padding="8dp">
    <ImageView
        android:id="@+id/product_img"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:contentDescription="@string/product_image"
        android:background="@drawable/ic_img_black_24dp"
        android:scaleType="fitCenter"
        android:backgroundTint="@color/light_grey"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:gravity="start">
        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name_placeholder"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/theme_green"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price_placeholder"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/add_btn"
            android:layout_marginHorizontal="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_add"
            android:fontFamily="sans-serif-black"
            android:backgroundTint="@color/white"
            android:textColor="@color/theme_green"
            android:paddingVertical="4dp"/>
    </LinearLayout>
</LinearLayout>