<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp"
    android:paddingVertical="8dp"
    android:background="@android:color/transparent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/theme_green"
            android:text="@string/order_id_placeholder"
            android:fontFamily="sans-serif-black"/>
        <TextView
            android:id="@+id/order_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_in_progress_hint"/>
    </LinearLayout>

    <TextView
        android:id="@+id/order_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:text="@string/product_price_placeholder"
        android:fontFamily="sans-serif-black"
        android:textSize="24sp"
        android:textColor="@color/black"
        tools:ignore="RelativeOverlap" />
</RelativeLayout>