<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SignUpActivity"
    android:background="@color/light_grey">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginHorizontal="24dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="24sp"
                android:textColor="@color/design_default_color_primary_dark"
                android:fontFamily="sans-serif-black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_caption"
                android:layout_marginVertical="8dp"
                android:fontFamily="sans-serif-black"
                android:textColor="@android:color/darker_gray"/>
            <EditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginVertical="8dp"
                android:background="@drawable/search_background"
                android:elevation="2dp"
                android:hint="@string/full_name_hint"
                android:paddingHorizontal="24dp"
                android:imeOptions="actionNext"/>
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/search_background"
                android:elevation="2dp"
                android:hint="@string/email_hint"
                android:paddingHorizontal="24dp"
                android:imeOptions="actionNext"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/search_background"
                android:elevation="2dp"
                android:hint="@string/password_hint"
                android:paddingHorizontal="24dp"
                android:inputType="textPassword"
                android:imeOptions="actionNext"/>
            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="top"
                android:background="@drawable/search_background"
                android:elevation="2dp"
                android:hint="@string/house_address_hint"
                android:scrollbars="vertical"
                android:inputType="textMultiLine"
                android:imeOptions="actionDone"/>
            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_btn"
                android:fontFamily="sans-serif-black"
                android:paddingVertical="16dp"/>
            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:visibility="gone"/>

<!--            <TextView-->
<!--                android:layout_marginVertical="16dp"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/or_seperator"-->
<!--                android:fontFamily="sans-serif-black"/>-->

<!--            <Button-->
<!--                android:id="@+id/login_btn"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/already_a_user_btn"-->
<!--                android:fontFamily="sans-serif-black"-->
<!--                android:backgroundTint="@color/theme_green"-->
<!--                android:paddingVertical="16dp"/>-->

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/sign_up_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:src="@drawable/ic_back_black_24dp"
        android:background="@drawable/small_btn_bg"
        android:padding="8dp"
        android:tint="@color/design_default_color_primary"/>

</androidx.constraintlayout.widget.ConstraintLayout>