<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.customer.BagActivity"
    android:background="@color/light_grey">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="2dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp">
            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                android:paddingHorizontal="12dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_back_black_24dp"
                android:background="@android:color/transparent"
                android:tint="@color/design_default_color_primary_dark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_bag_title"
                android:textSize="21sp"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/design_default_color_primary_dark"/>
    </LinearLayout>

    <TextView
        android:id="@+id/title"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/current_bag_items"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bag_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="64dp"/>

    <Button
        android:id="@+id/place_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/place_order_btn"
        android:fontFamily="sans-serif-black"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>